@@ -19,13 +19,6 @@
         />
 
     <browser:page
-        for="*"
-        name="tinymce-plone3.css"
-        class=".style.Plone3TinyStyle"
-        permission="zope2.View"
-        />
-
-    <browser:page
         for="..interfaces.utility.ITinyMCE"
         name="tinymce-getpathbyuid"
         class=".url.TinyMCEUrl"
